# bedrock

./: Cargo.toml  DESIGN.md  build.rs
src/: lib.rs
src/crypto/: mod.rs  utils.rs
src/crypto/multisig/: bdn18.rs  mod.rs
src/crypto/ppss/: jkkx16.rs  lagrange.rs  mod.rs  sss.rs
src/crypto/sig/: mod.rs  schnorr.rs
src/crypto/signature/: mod.rs  schnorr.rs
src/crypto/signature/schnorr/: mod.rs
src/protos/: .gitignore  initialize.proto  recover.proto  vault.proto
src/remote/: mod.rs
