[package]
name = "bedrock-vault"
version = "0.1.0"
edition = "2021"
authors = [ "bedrock contributors" ]
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[dependencies]
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.5.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.5.0", default-features = false }
ark-secp256k1 = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", default-features = true }

blake2 = { version = "0.9" }
digest = "0.9"