[package]
name = "bedrock-vault"
version = "0.1.0"
edition = "2021"
authors = [ "bedrock contributors" ]
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-secp256k1 = { version = "^0.4.0", default-features = false }
ark-poly = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = true }

aead = "*"
aes = "*"
aes-gcm = "*"
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
blake2 = { version = "0.9" }
digest = "0.9"
rand = "*"
rand_chacha = "*"

protobuf = "3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "*"
clap = { version = "4.5.22", features = ["cargo", "derive"] }
directories = "*"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[[bin]]
name = "bedrock"
path = "src/bin/main.rs"